# mneme

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  conftest.py  mkdocs.yml  pyproject.toml  verify.sh
.claude/skills/run-mneme-experiment/: SKILL.md
.claude/skills/run-praxis-experiment/: SKILL.md
docs/: 00-product-brief.md  01-vision-and-thesis.md  02-architecture.md  03-knowledge-schema.md  04-mvp-experiment.md  05-multi-agent-and-conflicts.md  06-risks-and-failure-modes.md  07-roadmap.md  08-glossary.md  HANDOFF.md  index.md  phase-0-results.md  phase-1-experiment.md  phase-1-plan.md  phase-2-plan.md
docs/adr/: 0001-append-only-event-log.md  0002-schema-as-neutral-interop-layer.md  0003-runtime-adapter-boundary.md  0004-mandatory-provenance-confidence.md  0005-oracle-trust-by-diversity.md  0006-status-semantics-phase0.md  0007-phase-0-gate-passed.md  0008-oracle-source-independence-gap.md  0009-phase-1-scope-and-praxis-reframe.md  0010-phase-1-regression-recall-verdict.md  0011-phase-2-scope-and-deferrals.md  0012-multi-writer-concurrency-contract.md  0013-recency-decay-as-projection-derivation.md  0014-e-mode-candidate-persistence.md  0015-exploration-reward-pre-registration.md  0016-real-app-sut-selection.md  0017-schema-extension-auth-state.md  0018-phase-3-scope-and-library-git-reframe.md  0019-brain-pluggability-and-execution-surfaces.md  0020-pypi-packaging-and-distribution.md  0021-praxis-directory-convention.md  0022-praxis-teach-skill.md  0023-regress-explore-dual-surface-and-report.md  0024-ci-integration-invoking-commands.md  0024-github-action-regress-and-candidate-pr.md  0025-landing-page-and-docs-site.md  0026-persistent-auth-session-reuse.md  0027-console-test-runner-and-claude-p-brain.md  0028-regress-signal-type-contract.md  0029-oracle-no-self-certification.md  0030-signals-as-checkable-facts.md  0031-signals-as-structured-checks.md  0032-streaming-network-signal-partial-confirmation.md  0033-confirmation-by-identity-with-mandatory-evidence.md  0034-brain-model-pin-and-precedence.md  0035-multi-environment-support.md  README.md
docs/examples/: auth-and-2fa.md  ci.md  conduit.md  gitea.md  multi-env.md  testapp.md
docs/examples/ci/: praxis-regress.yml
docs/phase-2-features/: 01-multi-writer.md  02-recency-decay.md  03-candidate-persistence.md  04-exploration-reward.md  05-real-app-sut.md  README.md
experiments/exploration_reward/: README.md  __init__.py  goodhart_attacks.md  metrics.py  pre_registration.md
experiments/multi_writer/: README.md  __init__.py  harness.py
experiments/regression_recall/: LOCAL_RUN.md  README_FROZEN.md  __init__.py  cold_readme_per_goal.md  emode_prompt.txt  exec_anthropic.py  harness.py  judge_prompt.txt  manifest.json  manifest.py  metrics.py  pre_registration.md  run_live.py
experiments/regression_recall/knowledge/: admin_access.knowledge.yaml  checkout.knowledge.yaml  login.knowledge.yaml  search.knowledge.yaml
experiments/regression_recall_real/: README.md  __init__.py  manifest.json  manifest.py  pre_registration.md
experiments/regression_recall_real/knowledge/: edit_article.knowledge.yaml  favorite_article.knowledge.yaml  follow_user.knowledge.yaml  login.knowledge.yaml  publish_article.knowledge.yaml
experiments/regression_recall_real/setup/: bring_up.sh  docker-compose.yml
experiments/ui-mutation/: LOCAL_RUN.md  README.md  evolution.py  harness.py  metrics.py  mutate.py  oracle_stress.py  runtimes.py  simapp.py  testapp.py
schema/: knowledge.phase1.schema.json  knowledge.schema.json
schema/examples/: create-welcome-popup.knowledge.yaml  login.knowledge.yaml
src/mneme/: __init__.py
src/mneme/adapters/: browser_use.py  playwright.py
src/mneme/merge/: projection.py
src/mneme/model/: knowledge.py
src/mneme/oracle/: __init__.py  trust.py
src/mneme/store/: __init__.py  events.py  file_store.py
src/praxis/: auth_session.py  resources.py  secrets.py  skill_driver.py
src/praxis/adapters/: __init__.py  browser_use.py  spi.py
src/praxis/cli/: __init__.py  claude_brain.py  main.py
src/praxis/merge/: __init__.py  candidates.py  decay.py  projection.py
src/praxis/metrics/: __init__.py  exploration_reward.py
src/praxis/model/: __init__.py  check.py  knowledge.py  predicate.py  trigger_validator.py
src/praxis/oracle/: __init__.py  trust.py
src/praxis/runner/: __init__.py  _parallel.py  engine.py  exploration.py  prompts.py  regression.py  report.py
src/praxis/skills/: __init__.py
src/praxis/store/: __init__.py  agent_identity.py  candidate_files.py  events.py  file_store.py
tasks/adr-0026-auth-session-impl/: session-reuse-proof.md  task-brief.md  task-plan.md
tasks/adr-0031-structured-checks/: task-plan.md
tasks/adr-0031-teach-authoring/: task-plan.md
tasks/phase-2-adr-decomposition/: task-brief.md  task-plan.md
tasks/phase-3-adrs/: task-plan.md
tasks/phase-3-handoff/: handoff.md
tasks/phase-3-impl/: handoff.md  integration-run.md  task-plan.md  teach-proof.md
tasks/signals-as-facts/: task-plan.md
tests/: test_adapters.py  test_auth_session.py  test_brain_seam.py  test_candidate_files.py  test_candidate_persistence.py  test_check.py  test_claude_brain.py  test_cli.py  test_conduit_bringup.py  test_confirmation_by_identity.py  test_evolution.py  test_experiment_harness.py  test_exploration_reward.py  test_exploration_reward_experiment.py  test_explore_aggregate.py  test_init_layout.py  test_integration_phase3.py  test_merge_decay.py  test_merge_projection.py  test_model_schema_agree.py  test_multi_writer.py  test_multi_writer_harness.py  test_oracle_stress.py  test_oracle_trust.py  test_packaging.py  test_predicate.py  test_regress_aggregate.py  test_regress_structured_check.py  test_regress_structured_signal.py  test_regression_recall_harness.py  test_regression_recall_metrics.py  test_regression_recall_real.py  test_runner_exploration.py  test_runner_regression.py  test_runs_store.py  test_schema_examples_validate.py  test_secrets.py  test_store_append_only.py  test_teach_session.py  test_testapp_phase1.py  (+1 more)
(+101 files in other folders)
