# Distribution name is `praxis-qa` because `praxis` is taken on PyPI
# (ADR-0020 decision 1). The import package and the CLI command both stay
# `praxis`: only the published distribution name moves.
[project]
name = "praxis-qa"
version = "0.0.5"
description = "A shared semantic-memory layer for QA agents. Agents store and maintain knowledge about a system under test (goals, recognition signals, success/failure oracles, alternative paths, risks) decoupled from the procedure used to reach it."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Your Name" }]
keywords = ["qa", "testing", "agents", "memory", "model-based-testing", "browser-automation"]

dependencies = [
    "pydantic>=2",     # typed knowledge model + validation against the schema
    "pyyaml>=6",       # human-editable knowledge files
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5", "mypy>=1.10", "jsonschema>=4"]
# Adapters are extras so the core stays runtime-agnostic (see ADR-0003).
browser-use = ["browser-use"]
# Anthropic SDK for the offline regression-recall EXPERIMENT executor only
# (`experiments/regression_recall/exec_anthropic.py` + `run_live.py`). It is NOT
# the brain an installed wheel runs: nothing under `src/praxis` imports
# `anthropic`. The autonomous CI brain is the Claude Code CLI driven headless as
# `claude -p` (ADR-0027), the SAME brain `praxis regress` / `praxis explore` use
# locally; CI installs Claude Code on the runner, never this extra (see
# `docs/examples/ci.md`). This extra exists only so the experiment harness has a
# named install path; the core + tests run without it.
live = ["anthropic>=0.40"]
# Docs-only dev tool: the mkdocs-material static-site generator that renders the
# `docs/` tree into the landing page and docs site (ADR-0025). It is NOT a core
# dependency and NOT a runtime adapter; the base install stays pydantic + pyyaml
# only (ADR-0020 decision 3). Install with `pip install -e ".[docs]"`.
docs = ["mkdocs-material>=9"]
# stagehand / playwright adapters declared as they are implemented.

[project.scripts]
praxis = "praxis.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/praxis"]
# Ship the JSON schema as package data inside the wheel (ADR-0020 decision 6).
# The schema lives once at the repo root (`schema/knowledge.schema.json`) and is
# force-included into the `praxis` package so an installed wheel resolves the
# SAME bytes the source tree tests against, with no second copy to drift.
# `src/praxis/skills/` is a regular sub-package and ships via `packages` above
# (ADR-0020 decision 7); the non-`.py` SKILL.md files under it are carried by
# the artifacts rule below.
[tool.hatch.build.targets.wheel.force-include]
"schema/knowledge.schema.json" = "praxis/_resources/knowledge.schema.json"

[tool.hatch.build]
# SKILL.md (and any other non-Python skill assets) are not .py files, so name
# them explicitly as build artifacts to keep them in the wheel and the sdist.
artifacts = ["src/praxis/skills/**/*.md"]

[tool.hatch.build.targets.sdist]
# The sdist already carries `schema/` from the repo root; keep the skills tree
# and the schema in it so `pip install` from an sdist matches the wheel.
include = ["src/praxis", "schema", "README.md", "pyproject.toml"]
artifacts = ["src/praxis/skills/**/*.md"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint.per-file-ignores]
# The experiment harness must bootstrap sys.path (src layout + hyphenated package
# dir name) before it can import `praxis`, so its imports are intentionally not at
# the very top of the file.
"experiments/ui-mutation/harness.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
packages = ["praxis"]
mypy_path = "src"
warn_unused_ignores = true

# yaml/jsonschema ship no type stubs (dev-only / optional); browser-use is an
# optional extra. Ignore missing stubs rather than pulling stub packages into deps.
[[tool.mypy.overrides]]
module = ["yaml", "jsonschema", "browser_use"]
ignore_missing_imports = true
